--- a/travel/app/styles/partials/_nav.scss
+++ b/travel/app/styles/partials/_nav.scss
@@ -15,7 +15,8 @@
   margin-right: 1rem;
 }
 
-div.districts {
+div.districts,
+div.activities {
   @include shadow(2);
   background-color: white;
   left: 0;
