--- a/travel/app/styles/partials/_base.scss
+++ b/travel/app/styles/partials/_base.scss
@@ -88,12 +88,18 @@ figcaption {
 
 main {
   position: relative;
+
+  &.stay {
+    left: 50%;
+    position: fixed;
+    transform: translateX(-50%);
+  }
 }
 
 nav {
   background-color: white;
   border-bottom: .3rem solid darken(white, 5);
-  padding: 1rem 0;
+  padding: 4rem 0 0 0;
   position: relative;
 
   h6 {
