filter and unfilter; beginning of waypoints

--- a/travel/app/styles/main.scss
+++ b/travel/app/styles/main.scss
@@ -8,5 +8,6 @@ $icon-font-path: '../fonts/';
 @import "partials/base";
 @import "partials/onboarding";
 @import "partials/nav";
+@import "partials/waypoints";
 @import "partials/things";
 @import "partials/footer";
