--- a/travel/app/styles/partials/_base.scss
+++ b/travel/app/styles/partials/_base.scss
@@ -98,7 +98,7 @@ main {
 
 nav {
   background-color: white;
-  border-bottom: .3rem solid darken(white, 5);
+  // border-bottom: .3rem solid darken(white, 5);
   padding: 4rem 0 0 0;
   position: relative;
 
