--- a/travel/app/styles/partials/_things.scss
+++ b/travel/app/styles/partials/_things.scss
@@ -10,6 +10,18 @@
     }
   }
 
+  .reset {
+    color: rgba(black, 0);
+    cursor: pointer;
+    font-size: 2rem;
+    font-weight: lighter;
+    transition: color .15s ease-out;
+  }
+
+  h4:hover .reset {
+    color: rgba(black, .2);
+  }
+
   img {
     filter: brightness(.7);
     height: 23rem;
