--- a/travel/app/styles/partials/_things.scss
+++ b/travel/app/styles/partials/_things.scss
@@ -73,7 +73,14 @@
       opacity: .3;
       position: absolute;
       top: 0;
+      transition: opacity .2s ease-out;
       width: 3.6rem;
+    }
+  }
+
+  &:hover {
+    h3:after {
+      opacity: .7;
     }
   }
 }
