uh added some stuff, but i'm about to implement the nav redesign

--- a/travel/app/styles/partials/_onboarding.scss
+++ b/travel/app/styles/partials/_onboarding.scss
@@ -8,7 +8,7 @@
   top: 0;
   transition: top .4s ease-out;
   width: 100vw;
-  z-index: 10;
+  z-index: 100;
 
   &.inactive {
     top: -200%;
@@ -31,7 +31,7 @@
 }
 
 .bg2 {
-  background: url(http://cdn2.laketravis.com/wordpress1/wp-content/uploads/2013/03/bp_oasis.jpg) no-repeat center center;
+  background: url(../images/travis.jpeg) no-repeat center center;
   background-size: cover;
   margin-bottom: 10rem;
 }
