--- a/travel/app/styles/partials/_nav.scss
+++ b/travel/app/styles/partials/_nav.scss
@@ -1,3 +1,10 @@
+nav {
+  // @include shadow(1);
+  padding: 4rem 0 0 0;
+  position: relative;
+  // width: 100vw;
+}
+
 .dropdown {
   cursor: pointer;
   margin-right: 1rem;
