--- a/travel/app/styles/partials/_waypoints.scss
+++ b/travel/app/styles/partials/_waypoints.scss
@@ -34,6 +34,7 @@
   max-width: 30rem;
   position: absolute;
   right: 0;
+  text-align: center;
   top: 35%;
   transform: scale(1);
   transition: transform .25s ease-in-out;
@@ -53,14 +54,18 @@
     transform: scale(1.1);
   }
 
+  .icon {
+    padding: 2rem 0;
+    width: 4rem;
+  }
+
   .waypoints {
-    margin: 3rem auto;
+    margin: 4rem auto;
     width: 80%;
   }
 
-  h4,
-  h5 {
-    text-align: center;
+  ul {
+    text-align: left;
   }
 
   .recommended {
