--- a/travel/app/styles/partials/_nav.scss
+++ b/travel/app/styles/partials/_nav.scss
@@ -1,8 +1,10 @@
 nav {
-  // @include shadow(1);
-  padding: 4rem 0 0 0;
-  position: relative;
-  // width: 100vw;
+  @include shadow(1);
+  // padding: 4rem 0 0 0;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: 10;
 }
 
 .dropdown {
@@ -26,19 +28,22 @@ div.districts,
 div.activities {
   @include shadow(2);
   background-color: white;
-  left: 0;
+  left: 50%;
+  margin-top: 1rem;
+  max-width: 116rem;
+  overflow-y: scroll;
   padding: 2rem;
   position: absolute;
   top: 100%;
-  transform: scale(1.01);
+  transform: scale(1.01) translateX(-50%);
   width: 100%;
   z-index: 10;
 
   li {
     display: inline-block;
-    width: 49%;
+    width: 32%;
 
-    &:nth-of-type(2n) {
+    &:nth-of-type(3n) {
       margin-left: 1.4%;
     }
   }
