done designing new waypoints, but i'm done for the day

--- a/travel/app/styles/partials/_nav.scss
+++ b/travel/app/styles/partials/_nav.scss
@@ -25,7 +25,8 @@ nav {
 }
 
 div.districts,
-div.activities {
+div.activities,
+div.waypoints {
   @include shadow(2);
   background-color: white;
   left: 50%;
