--- a/travel/app/styles/partials/_waypoints.scss
+++ b/travel/app/styles/partials/_waypoints.scss
@@ -27,14 +27,16 @@
 
 .waypoints-wrapper {
   background-color: $accent;
+  color: #f5f5f5;
   cursor: pointer;
   float: right;
   height: 9.5rem;
   max-width: 30rem;
+  padding: 0 2rem;
   text-align: center;
   transform: scale(1);
   transition: transform .25s ease-in-out;
-  width: 8rem;
+  // width: 8rem;
   z-index: 100;
 
   &.active {
@@ -51,13 +53,8 @@
   }
 
   .icon {
-    padding: 3rem 0;
+    vertical-align: middle;
     width: 4rem;
-  }
-
-  .waypoints {
-    margin: 4rem auto;
-    width: 80%;
   }
 
   ul {
@@ -91,6 +88,12 @@
       }
     }
   }
+
+}
+
+.waypoints {
+  margin: 4rem auto;
+  width: 80%;
 
   h5 {
     padding-top: 2rem;
