--- a/travel/app/styles/partials/_waypoints.scss
+++ b/travel/app/styles/partials/_waypoints.scss
@@ -95,19 +95,26 @@
   margin: 4rem auto;
   width: 80%;
 
-  h5 {
-    padding-top: 2rem;
+  .wrapper div {
+    display: inline-block;
     position: relative;
+    vertical-align: top;
+    width: 30%;
 
-    &:before {
-      background-color: #f2f2f2;
-      content: ' ';
-      height: .3rem;
-      left: 50%;
+    &:not(:last-of-type):after {
+      background-color: #eee;
+      height: 100%;
+      left: 100%;
       position: absolute;
-      top: 0;
-      transform: translateX(-50%);
-      width: 90%;
+      width: .3rem;
     }
+  }
+
+  img {
+    width: 1.5rem;
+  }
+
+  li {
+    width: 100%;
   }
 }
