--- a/travel/app/styles/partials/_base.scss
+++ b/travel/app/styles/partials/_base.scss
@@ -5,7 +5,7 @@ html {
 body {
   background-color: white;
   color: #333;
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica ,Arial ,sans-serif;
   font-size: 1.6rem;
   height: 100vh;
   line-height: 2.56rem;
@@ -57,6 +57,7 @@ h6 {
 }
 
 p {
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica ,Arial ,sans-serif;
   font-size: 1.2rem;
 }
 
