tweaks so i don't forget

--- a/travel/app/styles/partials/_base.scss
+++ b/travel/app/styles/partials/_base.scss
@@ -83,6 +83,7 @@ figcaption {
   bottom: 1.5rem;
   left: 1.5rem;
   padding: .2rem 1rem;
+  pointer-events: none;
   position: absolute;
 
   > * {
