--- a/travel/app/styles/partials/_things.scss
+++ b/travel/app/styles/partials/_things.scss
@@ -11,7 +11,7 @@
   }
 
   .reset {
-    color: rgba(black, 0);
+    color: rgba(black, .1);
     cursor: pointer;
     font-size: 2rem;
     font-weight: lighter;
