--- a/travel/app/styles/main.scss
+++ b/travel/app/styles/main.scss
@@ -13,6 +13,7 @@ $icon-font-path: '../fonts/';
 @import "partials/nav";
 @import "partials/waypoints";
 @import "partials/things";
+@import "partials/events";
 @import "partials/footer";
 
 @import "partials/button";
