--- a/travel/app/styles/partials/_nav.scss
+++ b/travel/app/styles/partials/_nav.scss
@@ -1,6 +1,6 @@
 nav {
   @include shadow(1);
-  background-color: #E1E3DD;
+  background-color: #ededed;
   position: fixed;
   top: 0;
   width: 100vw;
