--- a/travel/app/styles/partials/_footer.scss
+++ b/travel/app/styles/partials/_footer.scss
@@ -14,6 +14,23 @@ footer {
   p {
     margin-bottom: 2.6rem;
   }
+
+  .resource {
+    display: inline-block;
+    margin-bottom: 3rem;
+    vertical-align: top;
+    width: 24%;
+  }
+
+  @media screen and (max-width: 767px) {
+    .resource {
+      width: 48%;
+
+      &:nth-child(2n) {
+        margin-left: 1%;
+      }
+    }
+  }
 }
 
 .cute-shit {
