--- a/travel/app/styles/partials/_waypoints.scss
+++ b/travel/app/styles/partials/_waypoints.scss
@@ -118,7 +118,12 @@
   }
 
   img {
+    margin-left: .5rem;
     width: 1.5rem;
+  }
+
+  h5 {
+    margin-bottom: 0;
   }
 
   li {
@@ -134,7 +139,7 @@
 
     &:hover {
       span {
-        opacity: .5;
+        opacity: .8;
       }
     }
   }
